# nand2tetris-hdl-parser

./: Cargo.toml  example.hdl  readme.md
.github/workflows/: ci.yml
benches/: parser.rs
dict-derive/: Cargo.toml
src/: lib.rs  main.rs  python.rs
test_cases/: Add16.hdl  example.hdl  example2.hdl
