[package]
name = "nand2tetris-hdl-parser"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
simple-error = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser"
harness = false