[package]
name = "nand2tetris-hdl-parser"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"
repository = "https://github.com/tcheinen/nand2tetris-hdl-parser"
license = "MIT"
description = "Parser for Nand2Tetris HDL files"
exclude = [".idea/*", "target"]

[dependencies]
nom = "5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser"
harness = false