[package]
name = "nand2tetris-hdl-parser"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"
repository = "https://github.com/tcheinen/nand2tetris-hdl-parser"
license = "MIT"
description = "Parser for Nand2Tetris HDL files"
exclude = [".idea/*", "target"]

[dependencies]
nom = "5"
serde = { version = "1.0", features = ["derive"] }
dict_derive = { path = "./dict-derive" }
[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dev-dependencies]
criterion = "0.3"



[lib]
name = "nand2tetris_hdl_parser"
crate-type = ["cdylib"]

[[bench]]
name = "parser"
harness = false